--- a/_site.yml
+++ b/_site.yml
@@ -2,7 +2,7 @@ name: "federicazoe.github.io"
 title: "Federica Zoe Ricci"
 description: |
   Federica Zoe Ricci's Personal website 
-output_dir: "."
+output_dir: "docs"
 theme: theme.css
 navbar:
   right:
