--- a/_site.yml
+++ b/_site.yml
@@ -22,4 +22,5 @@ navbar:
       href: https://github.com/federicazoe
     - icon: fa fa-envelope
       href : mailto:fzricci@uci.edu
+  search: false
 output: distill::distill_article
