some updates, mainly to papers and posters

--- a/_site.yml
+++ b/_site.yml
@@ -12,8 +12,8 @@ navbar:
       href: cv.html
     - icon: fa fa-github
       href: https://github.com/federicazoe
-    - icon: fa fa-linkedin
-      href: https://www.linkedin.com/in/federica-zoe-ricci-she-751180256/
+    - icon: fa fa-graduation-cap
+      href: https://scholar.google.com/citations?user=z3cnaS4AAAAJ&hl=en
     - icon: fa fa-envelope
       href : mailto:fzricci@uci.edu
   search: false
